--- a/ch10-00-generics.html
+++ b/ch10-00-generics.html
@@ -169,13 +169,13 @@
                     <main>
                         <h1><a class="header" href="#泛型型別特徵與生命週期" id="泛型型別特徵與生命週期">泛型型別、特徵與生命週期</a></h1>
 <p>每個程式語言都有能夠高效處理概念複製的工具。在 Rust 此工具就是<em>泛型（generics）</em>。泛型是實際型別或其他屬性的抽象替代。當我們在寫程式碼時，我們可以表達泛型的行爲，或是它們與其他泛型有何關聯，而不必在編譯與執行程式時知道它們實際上是什麼。</p>
-<p>和函式有辦法能接收多種未知數值作爲參數來執行相同程式碼，函式可以接受一些泛型型別參數，而不是實際型別像是 <code>i32</code> 或 <code>String</code>。事實上我們已經在第六章的 <code>Option&lt;T&gt;</code>、第八章的 <code>Vec&lt;T&gt;</code> 和 <code>HashMap&lt;K, V&gt;</code> 以及第九章的 <code>Result&lt;T, E&gt;</code> 使用過泛型了。在本章節，你將會探索如何用泛型定義你自己的型別、函式與方法！</p>
+<p>類似於函式有辦法能接收多種未知數值作爲參數來執行相同程式碼，函式也可以接受一些泛型型別參數，而不是實際型別像是 <code>i32</code> 或 <code>String</code>。事實上我們已經在第六章的 <code>Option&lt;T&gt;</code>、第八章的 <code>Vec&lt;T&gt;</code> 和 <code>HashMap&lt;K, V&gt;</code> 以及第九章的 <code>Result&lt;T, E&gt;</code> 使用過泛型了。在本章節，你將會探索如何用泛型定義你自己的型別、函式與方法！</p>
 <p>首先我們會先檢視如何提取參數來減少重複的程式碼。接著我們會以相同的技巧使用泛型將兩個只有參數型別不同的函式轉變成泛型函式。我們還會解釋如何在結構體和枚舉使用泛型型別。</p>
-<p>再來你會學會如何使用*特徵（traits）*來定義共同行爲。你可以組合特徵與泛型型別來限制泛型型別只適用在有特定行爲的型別，而不是任意型別。</p>
+<p>再來你會學會如何使用<em>特徵（traits）</em> 來定義共同行爲。你可以組合特徵與泛型型別來限制泛型型別只適用在有特定行爲的型別，而不是任意型別。</p>
 <p>最後我們會來介紹<em>生命週期（lifetimes）</em>，一種能讓編譯器知道引用如何互相關聯的泛型。生命週期讓我們能在許多情況下借用數值，同時能確保編譯器會檢查這些引用是有效的。</p>
 <h2><a class="header" href="#提取函數來減少重複性" id="提取函數來減少重複性">提取函數來減少重複性</a></h2>
-<p>在我們深入泛型語法之前，讓我門先來看如何不用泛型型別的情況下，用提取函式的方式減少重複的程式碼。之後我們就會用此方式來提取泛型函式！和你透過找出重複的程式碼來提取程式一樣，你也將找出重複的函式來轉成泛型。</p>
-<p>讓我們考慮一支尋找列表中最大數字的小城市，如範例 10-1 所示。</p>
+<p>在我們深入泛型語法之前，讓我們先來看如何不用泛型型別的情況下，用提取函式的方式減少重複的程式碼。之後我們就會用此方式來提取泛型函式！和你透過找出重複的程式碼來提取程式一樣，你也將找出重複的函式來轉成泛型。</p>
+<p>讓我們考慮一支尋找列表中最大數字的小程式，如範例 10-1 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let number_list = vec![34, 50, 25, 100, 65];
@@ -188,12 +188,12 @@
         }
     }
 
-    println!(&quot;The largest number is {}&quot;, largest);
+    println!(&quot;最大數字爲 {}&quot;, largest);
 <span class="boring">    assert_eq!(largest, 100);
 </span>}
 </code></pre></pre>
 <p><span class="caption">範例 10-1：在數字列表中尋找最大數字的程式碼</span></p>
-<p>此程式碼儲存整數列表到變數 <code>number_list</code> 並將列表第一個數字放入變數 <code>largest</code>。接著他會遍歷列表中的所有元素，如果目前數字比 <code>largest</code> 內儲存的數字還大的話，它就會替代成該變數的值。.不過如果目前數值小於或等於最大值的話，變數就不會被改變，程式會接續檢查列表中的下一個數字。在考慮完列表中的所有數字後，<code>largest</code> 就應該會拿到最大數字，在此例就是 100。</p>
+<p>此程式碼儲存整數列表到變數 <code>number_list</code> 並將列表第一個數字放入變數 <code>largest</code>。接著它會遍歷列表中的所有元素，如果目前數字比 <code>largest</code> 內儲存的數字還大的話，它就會替代成該變數的值。.不過如果目前數值小於或等於最大值的話，變數就不會被改變，程式會接續檢查列表中的下一個數字。在考慮完列表中的所有數字後，<code>largest</code> 就應該會拿到最大數字，在此例就是 100。</p>
 <p>要從兩個不同的數字列表中找到最大值的話，我們可以重複範例 10-1 的程式碼，然後在程式中兩個不同的地方使用相同的邏輯，如範例 10-2 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -207,7 +207,7 @@
         }
     }
 
-    println!(&quot;The largest number is {}&quot;, largest);
+    println!(&quot;最大數字爲 {}&quot;, largest);
 
     let number_list = vec![102, 34, 6000, 89, 54, 2, 43, 8];
 
@@ -219,7 +219,7 @@
         }
     }
 
-    println!(&quot;The largest number is {}&quot;, largest);
+    println!(&quot;最大數字爲 {}&quot;, largest);
 }
 </code></pre></pre>
 <p><span class="caption">範例 10-2：在<em>兩個</em>數字列表中尋找最大值</span></p>
@@ -243,18 +243,18 @@ fn main() {
     let number_list = vec![34, 50, 25, 100, 65];
 
     let result = largest(&amp;number_list);
-    println!(&quot;The largest number is {}&quot;, result);
+    println!(&quot;最大數字爲 {}&quot;, result);
 <span class="boring">    assert_eq!(result, &amp;100);
 </span>
     let number_list = vec![102, 34, 6000, 89, 54, 2, 43, 8];
 
     let result = largest(&amp;number_list);
-    println!(&quot;The largest number is {}&quot;, result);
+    println!(&quot;最大數字爲 {}&quot;, result);
 <span class="boring">    assert_eq!(result, &amp;6000);
 </span>}
 </code></pre></pre>
 <p><span class="caption">範例 10-3：抽象出尋找最大值的概念並用在兩個不同的列表</span></p>
-<p><code>largest</code> 函式有個參數 <code>list</code> 可以代表我們傳遞給函式的 <code>i32</code> 型別 slice。所以當我們呼叫此函式時，程式可以依據我們傳入的特定數值執行。</p>
+<p><code>largest</code> 函式有個參數 <code>list</code> 可以代表我們傳遞給函式的 <code>i32</code> 型別切片。所以當我們呼叫此函式時，程式可以依據我們傳入的特定數值執行。</p>
 <p>總結來說，以下是我們將範例 10-2 的程式碼轉換成範例 10-3 的步驟：</p>
 <ol>
 <li>找出重複的程式碼。</li>
@@ -262,7 +262,7 @@ fn main() {
 <li>更新重複使用程式碼的實例，改呼叫我們定義的函式。</li>
 </ol>
 <p>接我們將以相同的步驟來使用泛型來減少重複的程式碼。就像函式本體可以抽象出 <code>list</code> 而不用特定數值，泛型允許程式碼執行抽象型別。</p>
-<p>舉例來說，假數我們有兩個函式：一個會找出 <code>i32</code> 型別 slice 中的最大值而另一個會找出 <code>char</code> 型別 slice 的最大值。我們要如何刪除重複的部分呢？讓我們拭目以待！</p>
+<p>舉例來說，假數我們有兩個函式：一個會找出 <code>i32</code> 型別切片中的最大值而另一個會找出 <code>char</code> 型別切片的最大值。我們要如何刪除重複的部分呢？讓我們拭目以待！</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
