--- a/ch10-03-lifetime-syntax.html
+++ b/ch10-03-lifetime-syntax.html
@@ -212,7 +212,7 @@ To learn more, run the command again with --verbose.
 </code></pre>
 <p>變數 <code>x</code> 「存在的不夠久」。原因是因爲當內部作用域在第 7 行結束時，<code>x</code> 會離開作用域。但是 <code>r</code> 卻還在外部作用域中有效，我們會說的「活得比較久」。如果 Rust 允許此程式碼可以執行的話，<code>r</code> 就會引用到 <code>x</code> 離開作用域後被釋放的記憶體位置，然後我們嘗試對 <code>r</code> 做的事情都不會是正確的了。所以 Rust 如何決定此程式碼無效呢？它使用了借用檢查器。</p>
 <h3><a class="header" href="#借用檢查器" id="借用檢查器">借用檢查器</a></h3>
-<p>Rust 編譯器有個*借用檢查器（borrow checker）*會比較作用域來檢測所有的借用是否有效。範例 10-18 顯示了範例 10-17 的程式碼，但加上了變數生命週期的詮釋。</p>
+<p>Rust 編譯器有個<em>借用檢查器（borrow checker）</em> 會比較作用域來檢測所有的借用是否有效。範例 10-18 顯示了範例 10-17 的程式碼，但加上了變數生命週期的詮釋。</p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    {
         let r;                // ---------+-- 'a
@@ -244,18 +244,18 @@ To learn more, run the command again with --verbose.
 <p><code>x</code> 在此有生命週期 <code>'b</code>，此時它比 <code>'a</code> 還長。這代表 <code>r</code> 可以引用 <code>x</code>，因爲 Rust 知道 <code>r</code> 的引用在 <code>x</code> 是有效的時候永遠是有效的。</p>
 <p>現在你知道引用的生命週期，以及 Rust 如何分析生命週期以確保引用永遠有效了。讓我們來探索函式中參數與回傳值的泛型生命週期。</p>
 <h3><a class="header" href="#函式中的泛型生命週期" id="函式中的泛型生命週期">函式中的泛型生命週期</a></h3>
-<p>讓我們寫個回傳兩個字串切片中較長者的函式。此函式會回傳兩個字串切片並回傳一個字串 slcie。在我們實作 <code>longest</code> 函式後，範例 10-20 的程式碼應該要印出 <code>The longest string is abcd</code>。</p>
+<p>讓我們寫個回傳兩個字串切片中較長者的函式。此函式會回傳兩個字串切片並回傳一個字串切片。在我們實作 <code>longest</code> 函式後，範例 10-20 的程式碼應該要印出 <code>最長的字串爲 abcd</code>。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore">fn main() {
     let string1 = String::from(&quot;abcd&quot;);
     let string2 = &quot;xyz&quot;;
 
     let result = longest(string1.as_str(), string2);
-    println!(&quot;The longest string is {}&quot;, result);
+    println!(&quot;最長的字串爲 {}&quot;, result);
 }
 </code></pre>
 <p><span class="caption">範例 10-20：<code>main</code> 函式呼叫 <code>longest</code> 函式來找出兩個字串切片中較長的</span></p>
-<p>注意我們需要函式接收的字串切片屬於引用，因爲我們不希望 <code>longest</code> 函式會取得它參數的所有權。第四章的<a href="ch04-03-slices.html#%E5%AD%97%E4%B8%B2-slice-%E4%BD%9C%E7%88%B2%E5%8F%83%E6%95%B8">「字串切片作爲參數」</a><!-- ignore -->段落有提到爲何範例 10-20 的參數正是我們所想要使用的參數。</p>
+<p>注意我們需要函式接收的字串切片屬於引用，因爲我們不希望 <code>longest</code> 函式會取得它參數的所有權。第四章的<a href="ch04-03-slices.html#%E5%AD%97%E4%B8%B2%E5%88%87%E7%89%87%E4%BD%9C%E7%88%B2%E5%8F%83%E6%95%B8">「字串切片作爲參數」</a><!-- ignore -->段落有提到爲何範例 10-20 的參數正是我們所想要使用的參數。</p>
 <p>如果我們嘗試實作 <code>longest</code> 函式時，如範例 10-21 所示，它不會編譯過。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
@@ -263,7 +263,7 @@ To learn more, run the command again with --verbose.
 </span><span class="boring">    let string2 = &quot;xyz&quot;;
 </span><span class="boring">
 </span><span class="boring">    let result = longest(string1.as_str(), string2);
-</span><span class="boring">    println!(&quot;The longest string is {}&quot;, result);
+</span><span class="boring">    println!(&quot;最長的字串爲 {}&quot;, result);
 </span><span class="boring">}
 </span><span class="boring">
 </span>fn longest(x: &amp;str, y: &amp;str) -&gt; &amp;str {
@@ -294,9 +294,9 @@ error: could not compile `chapter10`.
 To learn more, run the command again with --verbose.
 </code></pre>
 <p>提示文字表示回傳型別需要有一個泛型生命週期參數，因爲 Rust 無法辨別出回傳的引用指的是 <code>x</code> 還是 <code>y</code>。事實上，我們也不知道，因爲函式本體中的 <code>if</code> 區塊會回傳 <code>x</code> 引用而 <code>else</code> 區塊會回傳 <code>y</code> 引用！</p>
-<p>當我們定義函式時，我們不知道傳遞進此函式的實際數值會是什麼，所以我們不知道到底是 <code>if</code> 或 <code>else</code> 的區塊會被執行。我們也不知道傳遞進來的引用實際的生命週期爲何，所以我們無法像範例 10-18 和 10-19 那樣觀察作用域，來判定我們回傳的引用會永遠有效。要修正此錯誤，我們要加上泛型生命週期參數來定義引用之間的關係，所以借用檢查器能夠進行分析。</p>
+<p>當我們定義函式時，我們不知道傳遞進此函式的實際數值會是什麼，所以我們不知道到底是 <code>if</code> 或 <code>else</code> 的區塊會被執行。我們也不知道傳遞進來的引用實際的生命週期爲何，所以我們無法像範例 10-18 和 10-19 那樣觀察作用域，來判定我們回傳的引用會永遠有效。要修正此錯誤，我們要加上泛型生命週期參數來定義引用之間的關係，讓借用檢查器能夠進行分析。</p>
 <h3><a class="header" href="#生命週期詮釋語法" id="生命週期詮釋語法">生命週期詮釋語法</a></h3>
-<p>生命週期詮釋不會改變引用能存活多久。就像當函式簽名指定了一個泛型型別參數時，函式變能夠接受任意型別一樣。函式可以指定一個泛型生命週期參數，這樣函式就能接受任何生命週期。生命週期詮釋描述了數個引用的生命週期之間互相的關係，而不會影響其生命週期。</p>
+<p>生命週期詮釋不會改變引用能存活多久。就像當函式簽名指定了一個泛型型別參數時，函式便能夠接受任意型別一樣。函式可以指定一個泛型生命週期參數，這樣函式就能接受任何生命週期。生命週期詮釋描述了數個引用的生命週期之間互相的關係，而不會影響其生命週期。</p>
 <p>生命週期詮釋的語法有一點不一樣：生命週期參數的名稱必須以撇號（<code>'</code>）作爲開頭，通常全是小寫且很短，就像泛型型別一樣。大多數的人會使用名稱 <code>'a</code>。我們將生命週期參數置於引用的 <code>&amp;</code> 之後，並使用空格區隔詮釋與引用的型別。</p>
 <p>以下是一些例子：沒有生命週期參數的 <code>i32</code> 引用、有生命週期 <code>'a</code> 的 <code>i32</code> 引用以及有生命週期 <code>'a</code> 的 <code>i32</code> 可變引用。</p>
 <pre><code class="language-rust ignore">&amp;i32        // 一個引用
@@ -312,7 +312,7 @@ To learn more, run the command again with --verbose.
 </span><span class="boring">    let string2 = &quot;xyz&quot;;
 </span><span class="boring">
 </span><span class="boring">    let result = longest(string1.as_str(), string2);
-</span><span class="boring">    println!(&quot;The longest string is {}&quot;, result);
+</span><span class="boring">    println!(&quot;最長的字串爲 {}&quot;, result);
 </span><span class="boring">}
 </span><span class="boring">
 </span>fn longest&lt;'a&gt;(x: &amp;'a str, y: &amp;'a str) -&gt; &amp;'a str {
@@ -325,18 +325,18 @@ To learn more, run the command again with --verbose.
 </code></pre></pre>
 <p><span class="caption">範例 10-22：<code>longest</code> 函式定義指定所有簽名中的引用必須有相同的生命週期 <code>'a</code></span></p>
 <p>此程式碼能夠編譯成功並產生我們希望在範例 10-20 的 <code>main</code> 函式中得到的結果。</p>
-<p>此函式簽名告訴 Rust 它有個生命週期 <code>'a</code>，函式的兩個參數都是字串切片，並且會與生命週期<code>'a</code>。此函式簽名還靠素了 Rust 從函式回傳的字串切片也會和生命週期 <code>'a</code> 存活的一樣久。實際上它代表 <code>longest</code> 函式回傳引用的生命週期與傳入時字串長度較短的引用的生命週期一樣。這些約束是我們希望 Rust 去強制執行的。記住當我們在此函式簽名指定生命週期參數時，我們不會變更任何傳入或傳出數值的生命週期。我們只是告訴借用檢查器應該要拒絕任何沒有服從這些約束的數值。注意到 <code>longest</code> 函式不需要知道 <code>x</code> 和 <code>y</code> 實際上會活多久，只需要知道有某個作用域會用 <code>'a</code> 取代來滿足此簽名。</p>
+<p>此函式簽名告訴 Rust 它有個生命週期 <code>'a</code>，函式的兩個參數都是字串切片，並且會有生命週期<code>'a</code>。此函式簽名還告訴了 Rust 從函式回傳的字串切片也會和生命週期 <code>'a</code> 存活的一樣久。實際上它代表 <code>longest</code> 函式回傳引用的生命週期與傳入時字串長度較短的引用的生命週期一樣。這些約束是我們希望 Rust 去強制執行的。記住當我們在此函式簽名指定生命週期參數時，我們不會變更任何傳入或傳出數值的生命週期。我們只是告訴借用檢查器應該要拒絕任何沒有服從這些約束的數值。注意到 <code>longest</code> 函式不需要知道 <code>x</code> 和 <code>y</code> 實際上會活多久，只需要知道有某個作用域會用 <code>'a</code> 取代來滿足此簽名。</p>
 <p>當要在函式詮釋生命週期時，詮釋會位於函式簽名中，而不是函式本體。Rust 可以不用任何協助就能分析函式中的程式碼。然而當函式擁有傳入或傳出外部程式碼的引用時，Rust 無法自己判別出參數與回傳值的生命週期。每次函式呼叫時的生命週期可能都不一樣。這就是爲何我們得親自詮釋生命週期。</p>
 <p>當我們向 <code>longest</code> 傳入實際引用時，<code>'a</code> 實際替代的生命週期爲 <code>x</code> 作用域與 <code>y</code> 作用域重疊得部分。換句話說，泛型生命週期 <code>'a</code> 取得的生命週期會等於 <code>x</code> 與 <code>y</code> 的生命週期中較短的。因爲我們將回傳引用詮釋了相同的生命週期參數 <code>'a</code>，回傳引用的生命週期也會保證在 <code>x</code> 和 <code>y</code> 的生命週期較短的結束前有效。</p>
 <p>讓我們來看看如何透過傳入不同實際生命週期的引用來使生命週期詮釋能約束 <code>longest</code> 函式，如範例 10-23 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
-    let string1 = String::from(&quot;long string is long&quot;);
+    let string1 = String::from(&quot;很長的長字串&quot;);
 
     {
         let string2 = String::from(&quot;xyz&quot;);
         let result = longest(string1.as_str(), string2.as_str());
-        println!(&quot;The longest string is {}&quot;, result);
+        println!(&quot;最長的字串爲 {}&quot;, result);
     }
 }
 <span class="boring">
@@ -349,17 +349,17 @@ To learn more, run the command again with --verbose.
 </span><span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 10-23使用 <code>longest</code> 函式並傳入 <code>String</code> 數值的引用，但兩個參數的實際生命週期均不相同</span></p>
-<p>在此例中 <code>string1</code> 在外部作用域結束前都有效，而 <code>string2</code> 在內部作用域結束前都有效，然後 <code>result</code> 會取得某個有效引用直到內部作用域結束爲止。執行此程式的話，你會看到借用檢查器認可此程式碼，它會編譯成功然後印出 <code>The longest string is long string is long</code>。</p>
+<p>在此例中 <code>string1</code> 在外部作用域結束前都有效，而 <code>string2</code> 在內部作用域結束前都有效，然後 <code>result</code> 會取得某個有效引用直到內部作用域結束爲止。執行此程式的話，你會看到借用檢查器認可此程式碼，它會編譯成功然後印出 <code>最長的字串爲 很長的長字串</code>。</p>
 <p>接下來，讓我們寫一個範例能要求 <code>result</code> 生命週期的引用必須是兩個引數中較短的才行。我們會移動變數 <code>result</code> 的宣告到外部作用域，但保留變數 <code>result</code> 的賦值與 <code>string2</code> 一樣在內部作用域。然後我們也將使用到 <code>result</code> 的 <code>println!</code> 移到外部作用域，緊接在內部作用域結束之後。如範例 10-24 所示，此程式碼會編譯不過。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">fn main() {
-    let string1 = String::from(&quot;long string is long&quot;);
+    let string1 = String::from(&quot;很長的長字串&quot;);
     let result;
     {
         let string2 = String::from(&quot;xyz&quot;);
         result = longest(string1.as_str(), string2.as_str());
     }
-    println!(&quot;The longest string is {}&quot;, result);
+    println!(&quot;最長的字串爲 {}&quot;, result);
 }
 <span class="boring">
 </span><span class="boring">fn longest&lt;'a&gt;(x: &amp;'a str, y: &amp;'a str) -&gt; &amp;'a str {
@@ -381,7 +381,7 @@ error[E0597]: `string2` does not live long enough
   |                                            ^^^^^^^ borrowed value does not live long enough
 7 |     }
   |     - `string2` dropped here while still borrowed
-8 |     println!(&quot;The longest string is {}&quot;, result);
+8 |     println!(&quot;最長的字串爲 {}&quot;, result);
   |                                          ------ borrow later used here
 
 error: aborting due to previous error
@@ -402,7 +402,7 @@ To learn more, run the command again with --verbose.
 </span><span class="boring">    let string2 = &quot;efghijklmnopqrstuvwxyz&quot;;
 </span><span class="boring">
 </span><span class="boring">    let result = longest(string1.as_str(), string2);
-</span><span class="boring">    println!(&quot;The longest string is {}&quot;, result);
+</span><span class="boring">    println!(&quot;最長的字串爲 {}&quot;, result);
 </span><span class="boring">}
 </span><span class="boring">
 </span>fn longest&lt;'a&gt;(x: &amp;'a str, y: &amp;str) -&gt; &amp;'a str {
@@ -417,11 +417,11 @@ To learn more, run the command again with --verbose.
 </span><span class="boring">    let string2 = &quot;xyz&quot;;
 </span><span class="boring">
 </span><span class="boring">    let result = longest(string1.as_str(), string2);
-</span><span class="boring">    println!(&quot;The longest string is {}&quot;, result);
+</span><span class="boring">    println!(&quot;最長的字串爲 {}&quot;, result);
 </span><span class="boring">}
 </span><span class="boring">
 </span>fn longest&lt;'a&gt;(x: &amp;str, y: &amp;str) -&gt; &amp;'a str {
-    let result = String::from(&quot;really long string&quot;);
+    let result = String::from(&quot;超長的字串&quot;);
     result.as_str()
 }
 </code></pre>
@@ -454,8 +454,8 @@ To learn more, run the command again with --verbose.
 }
 
 fn main() {
-    let novel = String::from(&quot;Call me Ishmael. Some years ago...&quot;);
-    let first_sentence = novel.split('.').next().expect(&quot;Could not find a '.'&quot;);
+    let novel = String::from(&quot;叫我以實瑪利。多年以前...&quot;);
+    let first_sentence = novel.split('.').next().expect(&quot;找不到'.'&quot;);
     let i = ImportantExcerpt {
         part: first_sentence,
     };
@@ -463,9 +463,9 @@ fn main() {
 </code></pre></pre>
 <p><span class="caption">範例 10-25：擁有引用的結構體，所以它的定義需要加上生命週期詮釋</span></p>
 <p>此結構體有個欄位 <code>part</code> 並擁有字串切片引用。如同泛型資料型別，我們在結構體名稱之後的尖括號內宣告泛型生命週期參數，所以我們就可以在結構體定義的本體中使用生命週期參數。此詮釋代表 <code>ImportantExcerpt</code> 的實例不能比它持有的欄位 <code>part</code> 活得還久。</p>
-<p><code>main</code> 函式在此產生一個結構體 <code>ImportantExcerpt</code> 的實例並持有一個引用，其爲變數 <code>novel</code> 所擁有的 <code>String</code> 中的第一個句子的引用。<code>novel</code> 的資料是在 <code>ImportantExcerpt</code> 實例之前建立的。除此之外，<code>novel</code> 在 <code>ImportantExcerpt</code> 離開作用於之前不會離開作用域，所以 <code>ImportantExcerpt</code> 實例中的引用是有效的。</p>
+<p><code>main</code> 函式在此產生一個結構體 <code>ImportantExcerpt</code> 的實例並持有一個引用，其爲變數 <code>novel</code> 所擁有的 <code>String</code> 中的第一個句子的引用。<code>novel</code> 的資料是在 <code>ImportantExcerpt</code> 實例之前建立的。除此之外，<code>novel</code> 在 <code>ImportantExcerpt</code> 離開作用域之前不會離開作用域，所以 <code>ImportantExcerpt</code> 實例中的引用是有效的。</p>
 <h3><a class="header" href="#生命週期省略" id="生命週期省略">生命週期省略</a></h3>
-<p>你已經學到了每個引用都有個生命週期，而且你需要在有使用引用的函式與結構體中指定生命週期參數。然而在第四章的範例 4-9 我們有可以函式可以不詮釋生命週期並照樣編譯成功，我門在範例 10-26 在展示一次。</p>
+<p>你已經學到了每個引用都有個生命週期，而且你需要在有使用引用的函式與結構體中指定生命週期參數。然而在第四章的範例 4-9 我們有函式可以不詮釋生命週期並照樣編譯成功，我們在範例 10-26 再展示一次。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn first_word(s: &amp;str) -&gt; &amp;str {
     let bytes = s.as_bytes();
@@ -496,16 +496,16 @@ fn main() {
 </span><span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 10-26：在範例 4-9 定義過的函式，雖然其參數與回傳值均爲引用，卻仍可編譯成功</span></p>
-<p>此函式可以不用生命週期詮釋仍照樣編譯過是有歷史因素的：在早期版本的 Rust（1.0 之前），此程式碼是無法編譯的，因爲每個引用都得有顯示生命週期。在當時的情況下，此函式簽名會長得像這樣：</p>
+<p>此函式可以不用生命週期詮釋仍照樣編譯過是有歷史因素的：在早期版本的 Rust（1.0 之前），此程式碼是無法編譯的，因爲每個引用都得有顯式生命週期。在當時的情況下，此函式簽名會長得像這樣：</p>
 <pre><code class="language-rust ignore">fn first_word&lt;'a&gt;(s: &amp;'a str) -&gt; &amp;'a str {
 </code></pre>
-<p>在寫了大量的 Rust 程式碼後，Rust 團隊發現 Rust 開發者會在特定情況反復輸入同樣的生命週期詮釋。這些情形都是可預期的，而且可以遵循一些明確的模式。開發者將這些模式加入編譯器的程式碼中，所以借用檢查器可以依據這些情況自行推導生命週期，而讓我們不必顯式詮釋。</p>
+<p>在寫了大量的 Rust 程式碼後，Rust 團隊發現 Rust 開發者會在特定情況反覆輸入同樣的生命週期詮釋。這些情形都是可預期的，而且可以遵循一些明確的模式。開發者將這些模式加入編譯器的程式碼中，所以借用檢查器可以依據這些情況自行推導生命週期，而讓我們不必顯式詮釋。</p>
 <p>這樣的歷史值得提起的原因是因爲很可能會有更多明確的模式被找出來並加到編譯器中，意味著未來對於生命週期詮釋的要求會更少。</p>
-<p>被寫進 Rust 引用分析的模式被稱作<em>生命週期省略規則（lifetime elision rules）</em>。這些不是程式設計師要遵守的過烏賊額，而是一系列編譯器能去考慮的情形。而如果你的程式碼符合這些情形時，你就不必顯式寫出生命週期。</p>
-<p>省略規則無法提供完整的推導。如果 Rust 能明確套用規則，但在這之後還是有引用存在模棱兩可的生命週期，編譯器就無法猜出剩餘引用的生命週期。在此情況，編譯器不穢亂猜，它會回傳錯誤給你，你可以指定生命週期詮釋來指明引用之間的關係。</p>
+<p>被寫進 Rust 引用分析的模式被稱作<em>生命週期省略規則（lifetime elision rules）</em>。這些不是程式設計師要遵守的規則，而是一系列編譯器能去考慮的情形。而如果你的程式碼符合這些情形時，你就不必顯式寫出生命週期。</p>
+<p>省略規則無法提供完整的推導。如果 Rust 能明確套用規則，但在這之後還是有引用存在模棱兩可的生命週期，編譯器就無法猜出剩餘引用的生命週期。在此情況，編譯器不會亂猜，它會回傳錯誤給你，你可以指定生命週期詮釋來指明引用之間的關係。</p>
 <p>在函式或方法參數上的生命週期稱爲<em>輸入生命週期（input lifetimes）</em>，而在回傳值的生命週期則稱爲<em>輸出生命週期（output lifetimes）</em>。</p>
 <p>當引用沒有顯式詮釋生命週期時，編譯器會用三項規則來推導它們。第一個規則適用於輸入生命週期，而第二與第三個規則適用於輸出生命週期。如果編譯器處理完這三個規則，卻仍有引用無法推斷出生命週期時，編譯器就會停止並回傳錯誤。適用於 <code>fn</code> 定義的規則一樣適用於 <code>impl</code> 區塊。</p>
-<p>第一個規則是每個引用都會有自己的生命週期參數。換句話說，一個函式只有一個參數的話，就只會有一個生命週期：<code>fn foo&lt;'a&gt;(x: &amp;'a i32)</code>；一個函式有兩個參數的話，就會有分別兩個生命週期參數：<code>fn foo&lt;'a, 'b&gt;(x: &amp;'a i32, y: &amp;'b i32)</code>。以此類推。</p>
+<p>第一個規則是每個引用都會有自己的生命週期參數。換句話說，一個函式只有一個參數的話，就只會有一個生命週期：<code>fn foo&lt;'a&gt;(x: &amp;'a i32)</code>；一個函式有兩個參數的話，就會有分別兩個生命週期參數：<code>fn foo&lt;'a, 'b&gt;(x: &amp;'a i32, y: &amp;'b i32)</code>，以此類推。</p>
 <p>第二個規則是如果剛好只有一個輸入生命週期參數，該參數就會賦值給所有輸出生命週期參數：<code>fn foo&lt;'a&gt;(x: &amp;'a i32) -&gt; &amp;'a i32</code>。</p>
 <p>第三個規則是如果有多個輸入生命週期參數，但其中一個是 <code>&amp;self</code> 或 <code>&amp;mut self</code>，由於這是方法，<code>self</code> 的生命週期會賦值給所有輸出生命週期參數。此規則讓方法更容易讀寫，因爲不用寫更多符號出來。</p>
 <p>讓我們假裝我們是編譯器。我們會檢查這些規則並找出範例 10-26 中函式 <code>first_word</code> 簽名中引用的生命週期。簽名的引用一開始沒有任何生命週期：</p>
@@ -543,14 +543,14 @@ fn main() {
 <span class="boring">
 </span><span class="boring">impl&lt;'a&gt; ImportantExcerpt&lt;'a&gt; {
 </span><span class="boring">    fn announce_and_return_part(&amp;self, announcement: &amp;str) -&gt; &amp;str {
-</span><span class="boring">        println!(&quot;Attention please: {}&quot;, announcement);
+</span><span class="boring">        println!(&quot;請注意：{}&quot;, announcement);
 </span><span class="boring">        self.part
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
 </span><span class="boring">fn main() {
-</span><span class="boring">    let novel = String::from(&quot;Call me Ishmael. Some years ago...&quot;);
-</span><span class="boring">    let first_sentence = novel.split('.').next().expect(&quot;Could not find a '.'&quot;);
+</span><span class="boring">    let novel = String::from(&quot;叫我以實瑪利。多年以前...&quot;);
+</span><span class="boring">    let first_sentence = novel.split('.').next().expect(&quot;找不到'.'&quot;);
 </span><span class="boring">    let i = ImportantExcerpt {
 </span><span class="boring">        part: first_sentence,
 </span><span class="boring">    };
@@ -570,26 +570,26 @@ fn main() {
 </span><span class="boring">
 </span>impl&lt;'a&gt; ImportantExcerpt&lt;'a&gt; {
     fn announce_and_return_part(&amp;self, announcement: &amp;str) -&gt; &amp;str {
-        println!(&quot;Attention please: {}&quot;, announcement);
+        println!(&quot;請注意：{}&quot;, announcement);
         self.part
     }
 }
 <span class="boring">
 </span><span class="boring">fn main() {
-</span><span class="boring">    let novel = String::from(&quot;Call me Ishmael. Some years ago...&quot;);
-</span><span class="boring">    let first_sentence = novel.split('.').next().expect(&quot;Could not find a '.'&quot;);
+</span><span class="boring">    let novel = String::from(&quot;叫我以實瑪利。多年以前...&quot;);
+</span><span class="boring">    let first_sentence = novel.split('.').next().expect(&quot;找不到'.'&quot;);
 </span><span class="boring">    let i = ImportantExcerpt {
 </span><span class="boring">        part: first_sentence,
 </span><span class="boring">    };
 </span><span class="boring">}
 </span></code></pre></pre>
-<p>這裏有兩個輸入生命週期，所以 Rust 用第一個生命週期省略規則給予 <code>&amp;self</code> 和 <code>announcement</code> 它們自己的生命週期。然後因爲其中一個參數是 <code>&amp;self</code>，回傳型別會取得 <code>&amp;self</code> 的生命週期，如此一來所有的生命週期都推導出來了。</p>
+<p>這裡有兩個輸入生命週期，所以 Rust 用第一個生命週期省略規則給予 <code>&amp;self</code> 和 <code>announcement</code> 它們自己的生命週期。然後因爲其中一個參數是 <code>&amp;self</code>，回傳型別會取得 <code>&amp;self</code> 的生命週期，如此一來所有的生命週期都推導出來了。</p>
 <h3><a class="header" href="#靜態生命週期" id="靜態生命週期">靜態生命週期</a></h3>
 <p>其中有個特殊的生命週期 <code>'static</code> 我們需要進一步討論，這是指該引用<em>可以</em>存活在整個程式期間。所有的字串字面值都有 <code>'static</code> 生命週期，我們可以這樣詮釋：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>let s: &amp;'static str = &quot;I have a static lifetime.&quot;;
+</span>let s: &amp;'static str = &quot;我有靜態生命週期。&quot;;
 <span class="boring">}
 </span></code></pre></pre>
 <p>此字串的文字會直接儲存在程式的二進制檔案中，所以永遠有效。因此所有的字串字面值的生命週期都是 <code>'static</code>。</p>
@@ -605,7 +605,7 @@ fn main() {
 </span><span class="boring">        string2,
 </span><span class="boring">        &quot;Today is someone's birthday!&quot;,
 </span><span class="boring">    );
-</span><span class="boring">    println!(&quot;The longest string is {}&quot;, result);
+</span><span class="boring">    println!(&quot;最長的字串爲 {}&quot;, result);
 </span><span class="boring">}
 </span><span class="boring">
 </span>use std::fmt::Display;
@@ -618,7 +618,7 @@ fn longest_with_an_announcement&lt;'a, T&gt;(
 where
     T: Display,
 {
-    println!(&quot;Announcement! {}&quot;, ann);
+    println!(&quot;公告！{}&quot;, ann);
     if x.len() &gt; y.len() {
         x
     } else {
@@ -629,7 +629,7 @@ where
 <p>這是範例 10-22 會回傳兩個字串切片較長者的 <code>longest</code> 函式。不過現在它有個額外的參數 <code>ann</code>，使用的是泛型型別 <code>T</code>，它可以是任何在 <code>where</code> 中所指定有實作 <code>Display</code> 特徵的型別。此額外參數會在函式比較兩個字串切片前印出來，這也是爲何需要 <code>Display</code> 特徵界限。因爲生命週期也是一種泛型，生命週期參數 <code>'a</code> 與泛型型別參數 <code>T</code> 都宣告在函式名稱後的尖括號內。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
 <p>我們在此章節涵蓋了許多內容！現在你已經知道泛型型別參數、特徵與特徵界限以及泛型生命週期參數，你已經準備好能寫出適用於許多不同情況且不重複的程式碼了。泛型型別參數讓你可以讓程式碼適用於不同型別；特徵與特徵界限確保就算型別爲泛型，它們都會有相同的行爲。你還學到了使用生命週期詮釋確保此如此彈性的程式碼不會造成迷途引用。而且這些分析都發生在編譯期間，完全不影響執行時效能！</p>
-<p>不管你信不信，本章節還有很多延伸主體可以導論，像是第十七章就會討論特徵物件（trait objects），這是另一個使用特徵的方法。另外還有一些更複雜的場合會涉及到更進階的生命週期詮釋。對此你可能就會想閱讀 <a href="../reference/index.html">Rust Reference</a>。接下來，你想學習如何在 Rust 寫測試，讓你可以確保程式碼能如期執行。</p>
+<p>不管你信不信，本章節還有很多延伸主題可以導論，像是第十七章就會討論特徵物件（trait objects），這是另一個使用特徵的方法。另外還有一些更複雜的場合會涉及到更進階的生命週期詮釋。對此你可能就會想閱讀 <a href="../reference/index.html">Rust Reference</a>。接下來，你將學習如何在 Rust 寫測試，讓你可以確保程式碼能如期執行。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
